--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,16 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js')
+        .then(() => console.log('index.html: service worker installed'))
+    .catch(err => console.error('Error', err));
+    }
+  </script>
 </head>
 <body>
-  <app-root></app-root>
+  <app-home></app-home>
 </body>
 </html>
